# partstoob

./: .dockerignore  .pre-commit-config.yaml  ALP  DEB  DEV  Dockerfile  Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  FED  NIX  OPE  PKGBUILD  README.md  RUN
.github/: BOOTSTRAP.md  CHANGELOG.md  MULTI_BOOT.md  SYSD_REMOVAL.md
.github/workflows/: bandit.yaml  mypy.yaml  pylint.yaml  pytest.yaml  python-build.yml  ruff-format.yaml  ruff-lint.yaml
archinstoo/: PKGBUILD  pyproject.toml
archinstoo/archinstoo/: __init__.py
archinstoo/archinstoo/lib/: args.py  general.py  global_menu.py  grimaur.py  hardware.py  installer.py  output.py  pacman.py  pathnames.py
archinstoo/archinstoo/lib/authentication/: crypt.py
archinstoo/archinstoo/lib/disk/: conf.py  device_handler.py  disk_menu.py  encryption_menu.py  filesystem.py  luks.py  lvm.py  partitioning_menu.py  subvolume_menu.py  utils.py
archinstoo/archinstoo/lib/interactions/: general_conf.py
archinstoo/archinstoo/lib/localization/: utils.py
archinstoo/archinstoo/lib/models/: __init__.py  application.py  authentication.py  bootloader.py  locale.py  mirrors.py  network.py  packages.py  service.py  users.py
archinstoo/archinstoo/lib/pm/: bootstrap.py  config.py  mirrors.py
archinstoo/archinstoo/lib/tui/: curses_menu.py
archinstoo/archinstoo/lib/utils/: env.py
archinstoo/archinstoo/scripts/: guided.py
archinstoo/tests/: test_args.py
archinstoo/tests/data/: test_config.json
isos/: ISOMOD
nvchecker/: nvchecker.toml
