[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "archinstoo"
version = "0.0.01"
description = "Arch Linux installer - guided, templates etc."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
    {name = "Hadean Eon", email = "hadean-eon-dev@proton.me"},
]
license = "GPL-3.0-only"
readme = "readme.md"
requires-python = ">=3.14"
keywords = ["linux", "arch", "archinstoo", "installer"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyparted>=3.13.0",
]

[project.urls]
Home = "https://archlinux.org"
Source = "https://github.com/h8d13/archinstoo"

[project.optional-dependencies]
dev = [
    "mypy==1.20.0",
    "pre-commit==4.5.1",
    "ruff==0.15.9",
    "pylint==4.0.5",
    "pytest==9.0.2",
]

[project.scripts]
archinstoo = "archinstoo:run_as_a_module"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# We could specify locales/languages.json etc instead, but catchall works too.
"archinstoo" = [
    "**/*.py",
    "**/*.mo",
    "**/*.po",
    "**/*.pot",
    "**/*.json",
]

[tool.setuptools.package-dir]
archinstoo = "archinstoo"

[tool.mypy]
python_version = "3.14"
files = "."
exclude = "^build/"
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_unimported = true
enable_error_code = [
    "deprecated",
    "explicit-override",
    "ignore-without-code",
    "mutable-override",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unimported-reveal",
    "unused-awaitable",
]
show_traceback = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "archinstoo.lib.disk.*"
# 'Any' imports are allowed because pyparted doesn't have type hints
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "archinstoo.lib.models.device"
# 'Any' imports are allowed because pyparted doesn't have type hints
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = [
    "parted",
    "_pytest.*",
    "pytest",
]
ignore_missing_imports = true

[tool.bandit]
targets = ["archinstoo"]
exclude = ["/tests"]

[tool.pytest]
pythonpath = ["."]
addopts = [
    "-s",
    "--strict",
]
testpaths = ["tests"]

[tool.pylint.main]
ignore-paths = [
    "^build/",
    "^docs/",
    "^node_modules/",
]
persistent = false
py-version = "3.14"
recursive = true

[tool.pylint.format]
indent-string = '\t'
max-line-length = 160

[tool.pylint."messages control"]
disable = [
    "C",
    "R",
    "attribute-defined-outside-init",
    "broad-exception-caught",
    "cell-var-from-loop",
    "dangerous-default-value",
    "fixme",
    "protected-access",
    "raise-missing-from",
    "unspecified-encoding",
    "unused-argument",
]

[tool.pylint.refactoring]
score = false

[tool.pylint.variables]
init-import = true

[tool.pylint.imports]
ignored-modules = ["parted"]

[tool.ruff]
target-version = "py314"
line-length = 160

[tool.ruff.format]
indent-style = "tab"
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "EXE",    # flake8-executable
    "F",      # Pyflakes
    "FA",     # flake8-future-annotations
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PLC",    # Pylint conventions
    "PLE",    # Pylint errors
    "PLW",    # Pylint warnings
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "SLOT",   # flake8-slot
    "T10",    # flake8-debugger
    "TID252", # relative-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]

ignore = [
    "B006",     # mutable-argument-default
    "B008",     # function-call-in-default-argument
    "B904",     # raise-without-from-inside-except
    "B905",     # zip-without-explicit-strict
    "B909",     # loop-iterator-mutation
    "COM812",   # missing-trailing-comma
    "PLC0415",  # import-outside-top-level
    "PLC1901",  # compare-to-empty-string
    "PLW1514",  # unspecified-encoding
    "PLW1641",  # eq-without-hash
    "PLW2901",  # redefined-loop-name
    "RUF005",   # collection-literal-concatenation
    "RUF015",   # unnecessary-iterable-allocation-for-first-element
    "RUF039",   # unraw-re-pattern
    "RET504",   # unnecessary-assign-before-return
    "RUF067",   # non-empty-init-module
    "SIM108",   # if-else-block-instead-of-if-exp
    "W191",     # tab-indentation
]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.isort]
known-first-party = ["archinstoo"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/docs/conf.py" = ["A001"]  # copyright is a Sphinx convention
"**/lib/grimaur.py" = ["PLW0603"]  # standalone CLI tool uses module-level globals by design
